php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48637 "file" wrapper is overwritten when using --with-curlwrappers
Submitted: 2009-06-22 07:13 UTC Modified: 2009-07-25 20:45 UTC
Votes:3
Avg. Score:3.3 ± 0.5
Reproduced:3 of 3 (100.0%)
Same Version:3 (100.0%)
Same OS:1 (33.3%)
From: dg at artegic dot de Assigned: jani (profile)
Status: Closed Package: cURL related
PHP Version: 5.2.10 OS: *
Private report: No CVE-ID: None
 [2009-06-22 07:13 UTC] dg at artegic dot de
Description:
------------
make test produces the following error:

Fatal error: Out of memory (allocated -187170816) (tried to allocate -
190054388 bytes) in xxx/php-5.2.10/run-tests.php on line 1071



Reproduce code:
---------------
cURL Information => libcurl/7.19.4 OpenSSL/0.9.7d zlib/1.2.3

./configure \
--prefix=/php \
--with-config-file-path=/etc \
--with-curl \
--with-curlwrappers


Expected result:
----------------
cURL wrappers should work.


Actual result:
--------------
make -> no errors
make test -> fatal error


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-06-24 20:40 UTC] viktor at iuris dot hu
Agree, but it segfaults (x86_64) for me on that test. Using the compiled php-cli segfaults also (fastcgi), and produces 500-internal server errors. Everything is ok, if I compile without "--with-curlwrappers". (just like all previous versions)
 [2009-06-28 18:17 UTC] andy at networkmail dot eu
This test hangs my server, identified it as an infinite loop.

I've got rid of the infinite loop on my system by changing the "return true;" on line 13 to "return is_resource($this->fp);" of the test's file "ext/standard/tests/file/bug27508.phpt."

This fails the test on my system because of the cURL clash, and this may not be the best solution.
 [2009-07-10 22:04 UTC] jani@php.net
See also bug #48603
 [2009-07-25 20:44 UTC] svn@php.net
Automatic comment from SVN on behalf of jani
Revision: http://svn.php.net/viewvc/?view=revision&revision=286323
Log: - Fixed bug #48637 ("file" wrapper is overwritten when using --with-curlwrappers)
# Also fixes bug #48603, basically same issue.
 [2009-07-25 20:45 UTC] jani@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 09:00:01 2026 UTC