- Fixed bug #48637 ("file" wrapper is overwritten when using --with-curlwrappers) # Also fixes bug #48603, basically same issue.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@286323 c90b9560-bf6c-de11-be94-00142212c4b1